--- a/main.html
+++ b/main.html
@@ -1,9 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Click and Drag</title>
-  <link rel="stylesheet" href="style.css">
+  <style>
+    html {
+      box-sizing: border-box;
+      background: url('https://source.unsplash.com/NFs6dRTBgaM/2000x2000') fixed;
+      background-size: cover;
+    }
+    *, *:before, *:after {
+      box-sizing: inherit;
+    }
+    body {
+      min-height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-family: sans-serif;
+      font-size: 20px;
+      margin: 0;
+    }
+    .items {
+      height: 800px;
+      padding: 100px;
+      width: 100%;
+      border: 1px solid white;
+      overflow-x: scroll;
+      overflow-y: hidden;
+      white-space: nowrap;
+      user-select: none;
+      cursor: pointer;
+      transition: all 0.2s;
+      transform: scale(0.98);
+      will-change: transform;
+      position: relative;
+      background: rgba(255,255,255,0.1);
+      font-size: 0;
+      perspective: 500px;
+    }
+    .items.active {
+      background: rgba(255,255,255,0.3);
+      cursor: grabbing;
+      cursor: -webkit-grabbing;
+      transform: scale(1);
+    }
+    .item {
+      width: 200px;
+      height: calc(100% - 40px);
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 80px;
+      font-weight: 100;
+      color: rgba(0,0,0,0.15);
+      box-shadow: inset 0 0 0 10px rgba(0,0,0,0.15);
+    }
+    .item:nth-child(9n+1) { background: dodgerblue;}
+    .item:nth-child(9n+2) { background: goldenrod;}
+    .item:nth-child(9n+3) { background: paleturquoise;}
+    .item:nth-child(9n+4) { background: gold;}
+    .item:nth-child(9n+5) { background: cadetblue;}
+    .item:nth-child(9n+6) { background: tomato;}
+    .item:nth-child(9n+7) { background: lightcoral;}
+    .item:nth-child(9n+8) { background: darkslateblue;}
+    .item:nth-child(9n+9) { background: rebeccapurple;}
+    .item:nth-child(even) { transform: scaleX(1.31) rotateY(40deg); }
+    .item:nth-child(odd) { transform: scaleX(1.31) rotateY(-40deg); }
+  </style>
 </head>
 <body>
   <div class="items">
@@ -34,54 +98,37 @@
     <div class="item item25">25</div>
   </div>
 
-<script>
-//Your code goes here
-let draggedItem = null;
-let offsetX = 0;
-let offsetY = 0;
+  <script>
+    const slider = document.querySelector('.items');
 
-const container = document.querySelector('.items');
-const items = document.querySelectorAll('.item');
+    let isDown = false;
+    let startX;
+    let scrollLeft;
 
-items.forEach(item => {
-  item.style.position = 'absolute'; // Required for manual positioning
-  const rect = item.getBoundingClientRect();
-  const containerRect = container.getBoundingClientRect();
-  item.style.left = `${rect.left - containerRect.left}px`;
-  item.style.top = `${rect.top - containerRect.top}px`;
+    slider.addEventListener('mousedown', (e) => {
+      isDown = true;
+      slider.classList.add('active');
+      startX = e.pageX - slider.offsetLeft;
+      scrollLeft = slider.scrollLeft;
+    });
 
-  item.addEventListener('mousedown', (e) => {
-    draggedItem = item;
-    offsetX = e.clientX - item.offsetLeft;
-    offsetY = e.clientY - item.offsetTop;
-    item.style.zIndex = 1000; // Bring item to front
-  });
-});
+    slider.addEventListener('mouseleave', () => {
+      isDown = false;
+      slider.classList.remove('active');
+    });
 
-document.addEventListener('mousemove', (e) => {
-  if (draggedItem) {
-    const containerRect = container.getBoundingClientRect();
+    slider.addEventListener('mouseup', () => {
+      isDown = false;
+      slider.classList.remove('active');
+    });
 
-    let x = e.clientX - containerRect.left - offsetX;
-    let y = e.clientY - containerRect.top - offsetY;
-
-    // Constrain within container
-    x = Math.max(0, Math.min(container.clientWidth - draggedItem.offsetWidth, x));
-    y = Math.max(0, Math.min(container.clientHeight - draggedItem.offsetHeight, y));
-
-    draggedItem.style.left = `${x}px`;
-    draggedItem.style.top = `${y}px`;
-  }
-});
-
-document.addEventListener('mouseup', () => {
-  if (draggedItem) {
-    draggedItem.style.zIndex = 1;
-    draggedItem = null;
-  }
-});
-
-</script>
-
-  </body>
+    slider.addEventListener('mousemove', (e) => {
+      if (!isDown) return;
+      e.preventDefault();
+      const x = e.pageX - slider.offsetLeft;
+      const walk = (x - startX) * 2; // multiplier for scroll speed
+      slider.scrollLeft = scrollLeft - walk;
+    });
+  </script>
+</body>
 </html>
